base/src/test/resources/failure/tyck/nonsigma-proj.aya.txt
In file $FILE:1:23 ->

  1 |   def test (A : Type) => A.11
    |                          ^^

Error: Unable to project the 11th element of the expression
         A
       because the type of what you projected on is not a Sigma type, but 
       instead:
         Type 0
         (Normalized: Type 0)

1 error(s), 0 warning(s).
What are you doing?
